--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/firestore": "^23.5.0",
+    "@react-native-firebase/storage": "^23.5.0",
+    "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/native": "^7.1.24",
+    "@react-navigation/native-stack": "^7.8.5",
+    "base-64": "^1.0.0",
+    "firebase": "^12.6.0",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "@react-native/new-app-screen": "0.82.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-blob-util": "^0.24.4",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -28,6 +42,7 @@
     "@react-native/typescript-config": "0.82.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
